--- a/assets/css/bootstrap4-add-on.css
+++ b/assets/css/bootstrap4-add-on.css
@@ -302,9 +302,19 @@ svg {
   max-width: 33.3333333333%;
 }
 
+.bs4.col-5 {
+    flex: 0 0 41.66666666666667%;
+    max-width: 41.66666666666667%;
+}
+
 .bs4.col-6 {
     flex: 0 0 50%;
     max-width: 50%;
+}
+
+.bs4.col-7 {
+    flex: 0 0 58.33333333333%;
+    max-width: 58.33333333333333%;
 }
 
 .bs4.col-8 {
