--- a/assets/css/listing-cards.css
+++ b/assets/css/listing-cards.css
@@ -16,16 +16,36 @@
     line-height: 1.5;
 }
 
-.listing-img {
-    display: block;
+.aspect-ratio {
+    padding-top: 75%;
     position: relative;
-    overflow: hidden;
+}
+
+.listing-img {
+position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    display: flex;
+    justify-content: center;
 }
 
 .listing-img-top {
+    height: 100%;
+    z-index: 1;
+}
+
+.listing-card .listing-img::after {
+    position: absolute;
+    content: ' ';
+    height: 100%;
     width: 100%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    background: url(../svg/bg/listing/listing_bg_full.svg) no-repeat;
+    background-size: cover;
+    background-color: #fff;
 }
 
 .listing-info {
@@ -215,6 +235,7 @@
     border: 1px solid #fff;
     min-width: 50px;
     padding: 7px 18px 8px 18px;
+    z-index: 2;
 }
 
 .listing-card .sale {
@@ -268,6 +289,7 @@
     height: 33%;
     width: 100%;
     display: block;
+    z-index: 2;
 }
 
 .listing-card .save {
@@ -287,7 +309,7 @@
     height: 40px;
     width: 44px;
     display: block;
-    z-index: 2;
+    z-index: 3;
     background-size: 100% 100%, auto;
     transform: scale(0.5,0.5);
     transform-origin: 100% 0;
@@ -418,6 +440,12 @@
         padding: 8px 8.5%;
 
     }
+    .listing-card .save, .listing-card .saved {
+        transform: scale(0.7,0.7);
+    }
+    .listing-card .save:hover, .listing-card .saved:hover {
+        transform: scale(0.8,0.8);
+    }
 }
 
 @media screen and (max-width: 449px) {
@@ -426,6 +454,12 @@
     .demo-search-panel.dont-show.map .listing-layout {
         width: 100%;
         padding: 8px 2%;
+    }
+    .listing-card .save, .listing-card .saved {
+        transform: scale(0.6,0.6);
+    }
+    .listing-card .save:hover, .listing-card .saved:hover {
+        transform: scale(0.75,0.75);
     }
 }
 
@@ -448,8 +482,7 @@
 
 /* Buttons & Type NEED TO ADD TO GENERAL CSS */
     
-    
-    /* Buttons */
+/* Buttons */
 body.en .button-submit,
 body.en .button-contact,
 body.en .button-action,
@@ -487,8 +520,6 @@ body.en .listing-card .cur {
   background-color: var(--selection_background);
   color: var(--selection_color); }
   
-
-
   
 /**** Homenet Solid General Styles to ADD to General CSS ****/
 
