--- a/assets/css/listing-cards-old-no responsive.css
+++ b/assets/css/listing-cards-old-no responsive.css
@@ -378,69 +378,58 @@ position: absolute;
 }
 
 
+/* Layout and Media Queries */
 
+/* OLD */
 
-/* Layout General */
-
-.demo-search-panel.map {
-    padding: 0 6px 0 10px;
-    margin-left: auto;
-    margin-right: 0;
-    max-width: 100%;
-}
-
+/*
 .listing-layout {
+    width: 33.333333%;
     padding: 8px 6px;
     display: inline-block;
     vertical-align: top;
     white-space: normal;
 }
 
-
-/* Layout and Media Queries */
-
 /* With Map */
 
-
-@media screen and (min-width: 601px) {
-    .demo-search-panel.map {
-        padding: 0 10px 0 10px;
-    }
-    .demo-search-panel.map .listing-layout {
-        width: 50%;
-    }
-}
-
-@media screen and (min-width: 940px) {
-    .demo-search-panel.map .listing-layout {
-        width: 33.3333333333%;
-    }
-}
-
-@media screen and (min-width: 1220px) {
-    .demo-search-panel.map {
-        max-width: 54%;
-        padding: 0 6px 0 10px;
-    }
-    .demo-search-panel.map .listing-layout {
-        width: 50%;
-    }
-}
-
-@media screen and (min-width: 1500px) {
-    .demo-search-panel.map {
-        max-width: 60%;
-    }
-    .demo-search-panel.map .listing-layout {
-        width: 33.333333%;
-    }
+.demo-search-panel.map {
+    padding: 0 6px 0 10px;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: 0;
 }
 
 @media screen and (min-width: 2150px) {
-    .demo-search-panel.map .listing-layout {
+    .listing-layout {
         width: 25%;
     }
 }
+
+@media screen and (max-width: 1500px) {
+    .listing-layout {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 821px) and (max-width: 950px) {
+    .listing-layout {
+        width: 100%;
+    }
+
+    .demo-search-panel.map {
+        padding: 0 10px 0 10px;
+        max-width: 50%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .demo-search-panel.map {
+        padding: 0 10px 0 10px;
+        max-width: 100%;
+    }
+}
+
 
 
 /* Full */
@@ -451,33 +440,8 @@ position: absolute;
 }
 
 .demo-search-panel.dont-show.map .listing-layout {
+    width: 20%;
     padding: 10px 7px;
-}
-
-
-@media screen and (max-width: 939px) {
-    .demo-search-panel.dont-show.map .listing-layout {
-        width: 50%;
-        padding: 8px 1%;
-    }
-}
-
-@media screen and (min-width: 940px) {
-    .demo-search-panel.dont-show.map .listing-layout {
-        width: 33.3333333333%;
-    }
-}
-
-@media screen and (min-width: 1350px) {
-    .demo-search-panel.dont-show.map .listing-layout {
-        width: 25%;
-    }
-}
-
-@media screen and (min-width: 1750px) {
-    .demo-search-panel.dont-show.map .listing-layout {
-        width: 20%;
-    }
 }
 
 @media screen and (min-width: 2100px) {
@@ -486,7 +450,28 @@ position: absolute;
     }
 }
 
+@media screen and (max-width: 1750px) {
+    .demo-search-panel.dont-show.map .listing-layout {
+        width: 25%;
+    }
 
+    .demo-search-panel.dont-show.map {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1350px) {
+    .demo-search-panel.dont-show.map .listing-layout {
+        width: 33.333333%;
+    }
+}
+
+@media screen and (max-width: 920px) {
+    .demo-search-panel.dont-show.map .listing-layout {
+        width: 50%;
+        padding: 8px 1%;
+    }
+}
 
 /* Favorites */
 
