--- a/homepage/css/style.css
+++ b/homepage/css/style.css
@@ -33,6 +33,10 @@ a {
     -moz-transition: all ease-in-out 0.3s;
 }
 
+.clear {
+    both
+}
+
 .wrapper {
     display: block;
     overflow-x: hidden;
@@ -210,8 +214,8 @@ a {
     height: 60vw;
     background: #4ca8ba;
     position: absolute;
-    right: -14vw;
-    top: -34vw;
+    right: -11.5vw;
+    top: -36vw;
     transform: rotate(44deg);
     z-index: -1;
     border-radius: 0 0 30px 30px;
@@ -342,7 +346,7 @@ a {
 
 .section5_wrapper h2 {
     font-size: 3.3vw;
-    margin: 0 0 35px;
+    margin: 0 0 2.5%;
     text-align: center;
     font-weight: 100;
     text-transform: uppercase;
@@ -416,13 +420,13 @@ a {
 
 .section5_wrapper::after {
     content: '';
-    width: 32vw;
+    width: 33vw;
     height: 130vw;
     background: #4ca8ba;
     position: absolute;
     left: 30vw;
-    top: -28vw;
-    transform: rotate(74deg);
+    top: -29vw;
+    transform: rotate(76deg);
     z-index: -1;
     pointer-events: none;
 }
@@ -867,7 +871,7 @@ a {
 
     .section5_wrapper h2 {
         font-size: 8vw;
-        margin: 0 0 15px;
+        margin: 0 0 5%;
     }
 
     .sec5_content {
