--- a/assets/css/bootstrap4-add-on.css
+++ b/assets/css/bootstrap4-add-on.css
@@ -375,6 +375,11 @@ svg {
   max-width: 58.3333333333%;
 }
 
+.bs4.col-sm-8 {
+  flex: 0 0 66.6666666667%;
+  max-width: 66.6666666667%;
+}
+
 
     .bs4.col-sm-9 {
         flex: 0 0 75%;
