--- a/assets/css/calculator.css
+++ b/assets/css/calculator.css
@@ -335,17 +335,29 @@ span.empty {
 .mort-input.row3 {
 justify-content: center!important;
 text-align: center;
+max-width: 100%;
 }
+
 .mort-input.row2 .cslide,
-.mort-input.row3 .aslide {
-    flex: 0 0 100%;
-    max-width: 100%;
+.mort-input.row3 .aslide,
+.mort-input.row2 .cslide #cmortgage,
+.mort-input.row3 .aslide #amortgage{
+display: none;
 }
+.calc-input {
+    padding: 29px 0% 15px 0%;
+}
+
+/*
+
+  display no dlier in mobile
 .mort-input.row2 .cslide #cmortgage,
 .mort-input.row3 .aslide #amortgage{
     width: 90%;
     margin: auto;
 }
+*/
+
 }
 
 
